# NativeFlowBench

./: .gitignore  README.md  gradle.properties  settings.gradle
apks/: icc_javatonative-debug.apk  icc_javatonative.apk  icc_nativetojava-debug.apk  icc_nativetojava.apk  native_complexdata-debug.apk  native_complexdata.apk  native_complexdata_stringop.apk  native_dynamic_register_multiple.apk  native_heap_modify.apk  native_heap_summary.apk  native_leak-debug.apk  native_leak.apk  native_leak_dynamic_register-debug.apk  native_leak_dynamic_register.apk  native_method_overloading.apk  native_multiple_interactions.apk  native_multiple_libraries.apk  native_noleak-debug.apk  native_noleak.apk  native_noleak_array.apk  native_nosource.apk  native_pure-debug.apk  native_pure.apk  native_pure_direct-debug.apk  native_pure_direct.apk  native_pure_direct_customized.apk  (+6 more)
native_multiple_libraries/: CMakeLists.txt  build.gradle
native_multiple_libraries/src/androidTest/java/org/arguslab/native_multiple_libraries/: ExampleInstrumentedTest.java
native_multiple_libraries/src/main/: AndroidManifest.xml
native_multiple_libraries/src/main/java/org/arguslab/native_multiple_libraries/: MainActivity.java
native_multiple_libraries/src/main/jni/: foo.cpp  master.cpp
native_multiple_libraries/src/main/res/values/: strings.xml
native_multiple_libraries/src/test/java/org/arguslab/native_multiple_libraries/: ExampleUnitTest.java
native_pure/: CMakeLists.txt  build.gradle
native_pure/src/androidTest/java/org/arguslab/native_pure/: ExampleInstrumentedTest.java
native_pure/src/main/: AndroidManifest.xml
native_pure/src/main/jni/: main.cpp
native_pure/src/main/res/values/: strings.xml
native_pure/src/test/java/org/arguslab/native_pure/: ExampleUnitTest.java
native_pure_direct/: CMakeLists.txt  build.gradle
native_pure_direct/src/androidTest/java/org/arguslab/native_pure_direct/: ExampleInstrumentedTest.java
native_pure_direct/src/main/: AndroidManifest.xml
native_pure_direct/src/main/jni/: native-activity.cpp
native_pure_direct/src/main/res/values/: strings.xml
native_pure_direct/src/test/java/org/arguslab/native_pure_direct/: ExampleUnitTest.java
(+212 files in other folders)
